Created sweet alert validation for post tags

--- a/Views/Posts/Create.cshtml
+++ b/Views/Posts/Create.cshtml
@@ -83,8 +83,9 @@
 </div>
         @section Scripts {
             @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-
             <script>
+                let tagValues = '@ViewData["TagValues"]';
+
                 //Default font size but not for placeholder...
                 $('#Content').summernote({
                 });
