--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@using X.PagedList
+@using X.PagedList.Mvc.Core;
+@using X.PagedList.Web.Common; 
+@using BlogProject.Models
+@model IPagedList<Blog>
+
+@{
     ViewData["Title"] = "Dominic's IT Blog";
     ViewData["Subtitle"] = "Writing about .NET, C# and other web development topics.";
 }
@@ -6,66 +12,46 @@
 <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
-            <!-- Post preview-->
-            <div class="post-preview">
-                <a asp-controller="Posts" asp-action="Details" asp-route-id="1">
-                    <h2 class="post-title">Man must explore, and this is exploration at its greatest</h2>
-                    <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
-                </a>
-                <p class="post-meta">
-                    Posted by
-                    <a href="#!">Start Bootstrap</a>
-                    on September 24, 2021
-                </p>
-            </div>
-            <!-- Divider-->
-            <hr class="my-4" />
-            <!-- Post preview-->
-            <div class="post-preview">
-                <a asp-controller="Posts" asp-action="Details"><h2 class="post-title">I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</h2></a>
-                <p class="post-meta">
-                    Posted by
-                    <a href="#!">Start Bootstrap</a>
-                    on September 18, 2021
-                </p>
-            </div>
-            <!-- Divider-->
-            <hr class="my-4" />
-            <!-- Post preview-->
-            <div class="post-preview">
-                <a href="post.html">
-                    <h2 class="post-title">Science has not yet mastered prophecy</h2>
-                    <h3 class="post-subtitle">We predict too much for the next year and yet far too little for the next ten.</h3>
-                </a>
-                <p class="post-meta">
-                    Posted by
-                    <a href="#!">Start Bootstrap</a>
-                    on August 24, 2021
-                </p>
-            </div>
-            <!-- Divider-->
-            <hr class="my-4" />
-            <!-- Post preview-->
-            <div class="post-preview">
-                <a href="post.html">
-                    <h2 class="post-title">Failure is not an option</h2>
-                    <h3 class="post-subtitle">Many say exploration is part of our destiny, but it’s actually our duty to future generations.</h3>
-                </a>
-                <p class="post-meta">
-                    Posted by
-                    <a href="#!">Start Bootstrap</a>
-                    on July 8, 2021
-                </p>
-            </div>
-            <!-- Divider-->
-            <hr class="my-4" />
+
+            @foreach (var blog in Model)
+            {
+                <div class="post-preview">
+                    <a asp-controller="Posts" asp-action="BlogPostIndex" asp-route-id="@blog.Id">
+                        <h2 class="post-title">@blog.Name</h2>
+                        <h3 class="post-subtitle">@blog.Description</h3>
+                    </a>
+                    <p class="post-meta">
+                        Author:
+                        <a href="#!">@blog.BlogUser.FullName</a>
+                        on @blog.Created.ToString("MMM dd, yyyy")
+                    </p>
+                </div>
+            }
             <!-- Pager-->
             <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
         </div>
     </div>
 </div>
-    @section Scripts {
+
+<!--Add paging controls here-->
+<div class="row">
+    <div class="col h3">
+        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+    </div>
+</div>
+<div class="row">
+    <div class="col">
+        @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
+          new PagedListRenderOptions
+          {
+              LiElementClasses = new string[] { "page-item" },
+              PageClasses = new string[] { "page-link" }
+          });
+    </div>
+</div>
+
+@section Scripts {
 
 
 
-    }
+}
