--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -27,26 +27,23 @@
                     </p>
                 </div>
             }
-            <!-- Pager-->
-            <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
         </div>
     </div>
-</div>
 
-<!--Add paging controls here-->
-<div class="row">
-    <div class="col h3">
-        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
-    </div>
-</div>
-<div class="row">
-    <div class="col">
-        @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
-          new PagedListRenderOptions
-          {
-              LiElementClasses = new string[] { "page-item" },
-              PageClasses = new string[] { "page-link" }
-          });
+    <div class="d-flex justify-content-center">
+        <div class="row">
+            <div class="col-8 gx-3 h2">
+                Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+            </div>
+            <div class="col-4 gx-3">
+                @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
+                  new PagedListRenderOptions
+                  {
+                      LiElementClasses = new string[] { "page-item" },
+                      PageClasses = new string[] { "page-link" }
+                  })
+            </div>
+        </div>
     </div>
 </div>
 
