--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -11174,8 +11174,8 @@ header.masthead .post-heading .meta a {
 }
 @media (min-width: 992px) {
   header.masthead {
-    padding-top: 12.5rem;
-    padding-bottom: 12.5rem;
+   /* padding-top: 12.5rem;
+    padding-bottom: 12.5rem;*/
   }
   header.masthead .page-heading h1, header.masthead .page-heading .h1,
 header.masthead .site-heading h1,
