--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,7 +1,45 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{ 
+    ViewData["Title"] = "About Me";
 }
 
-<h1>The About page</h1>
+<section class="single-section about-area" style="font-family:  'Open Sans', sans-serif" id="about-area">
+    <div class="container">
+        <div class="row align-items-center">
+            <!-- Picture part-->
+            <div class="col-12 col-lg-5 about-img"><img class="img-fluid img-thumbnail" src="~/img/faceshot.jpg" alt="About Picture"></div>
+            <!-- Content part-->
+            <div class="col-12 col-lg-7 about-content">
+                <div class="content-block">
+                    <h2 class="content-subtitle">Who am I?</h2>
+                    <h6 class="content-title">I'm Dominic, a Full Stack Web Developer </h6>
+                    <div class="content-description">
+                        <p>I take problems and turn them into solutions with flexible web development skills. I am passionate about technology and always striving for excellence.</p>
+                    </div>
+
+                    <hr />
+
+                    <address class="content-info">
+                        <div class="row">
+                            <div class="col-12 col-md-5 single-info">
+                                <span><strong>Name: </strong>Dominic Wegrzynowski</span>
+                            </div>
+                            <div class="col-12 col-md-5 single-info">
+
+                                <span><strong>Email:</strong><a href="mailto:dominicwegrzynowski@gmail.com">dominicwegrzynowski@gmail.com</a></span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-md-5 single-info">
+                                <span><strong>Age:  </strong>21</span>
+                            </div>
+                            <div class="col-12 col-md-5 single-info">
+                                <span><strong>From:  </strong>United States</span>
+                            </div>
+                        </div>
+                    </address>
+                    <a class="btn btn-primary rounded-3" href="https://www.dominicwegrzynowski.dev" target="_blank" role="button">Portfolio</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
