--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -32,17 +32,20 @@
 
     <div class="d-flex justify-content-center">
         <div class="row">
-            <div class="col-8 gx-3 h2">
-                Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
-            </div>
-            <div class="col-4 gx-3">
-                @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
-                  new PagedListRenderOptions
-                  {
-                      LiElementClasses = new string[] { "page-item" },
-                      PageClasses = new string[] { "page-link" }
-                  })
-            </div>
+            @if (Model.PageCount > 1)
+            {
+                <div class="col-12 gx-3 h2">
+                    Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+                </div>
+                <div class="col-4 gx-3">
+                    @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
+                        new PagedListRenderOptions
+                        {
+                            LiElementClasses = new string[] { "page-item" },
+                            PageClasses = new string[] { "page-link" }
+                        });
+                </div>
+            }
         </div>
     </div>
 </div>
