--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -47,6 +47,15 @@
                     <div class="site-heading">
                         <h1>@ViewData["Title"]</h1>
                         <span class="subheading">@ViewData["Subtitle"]</span>
+
+                        <form asp-action="SearchIndex" asp-controller="Posts">
+                            <div class="input-group mt-5" mt-5>
+                                <input type="text" name="SearchTerm" class="form-control" placeholder="Search Term"/>
+                                <div class="input-group-append">
+                                    <button class="btn btn-primary btn-block" type="submit">Search</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
