--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,57 +1,92 @@
 ﻿@using X.PagedList
-@using X.PagedList.Mvc.Core;
-@using X.PagedList.Web.Common; 
+@using X.PagedList.Mvc.Core
+@using X.PagedList.Web.Common
 @using BlogProject.Models
+@using BlogProject.Services
+@using Microsoft.AspNetCore.Identity
+@using BlogProject.Enums
+
 @model IPagedList<Blog>
 
-@{
+@inject IImageService _imageService
+@inject UserManager<BlogUser> _userManager
+
+@{ 
     ViewData["Title"] = "Dominic's IT Blog";
-    ViewData["Subtitle"] = "Writing about .NET, C# and other web development topics.";
+    ViewData["Subtitle"] = "Writing about .NET, C#, and other web development topics.";
 }
 
-<div class="container px-4 px-lg-5">
+<div class="container-fluid">
     <div class="row gx-4 gx-lg-5 justify-content-center">
-        <div class="col-md-10 col-lg-8 col-xl-7">
+        <div class="col-md-12 col-lg-8 col-xl-7">
+            <div class="row">
+                @foreach (var blog in Model)
+                {
+                    <div class="col-sm-2 col-lg-4 mt-3">
+                        <div class="card border-primary border-1 rounded" style="width: 22rem; height: 33rem;">
+                            <img class="card-img-top" height="185" width="200" src="@_imageService.DecodeImage(blog.ImageData, blog.ContentType)" />
+                            <div class="card-body text-center">
+                                <div>
+                                    <hr class="card-hr" />
+                                    <h5 class="card-title">@blog.Name</h5>
+                                    <hr class="card-hr" />
+                                </div>
+                                <div>
+                                    <p class="card-text max-lines">@blog.Description</p>
+                                </div>
+                                <br />
+                                <div class="row align-content-center ">
 
-            @foreach (var blog in Model)
-            {
-                <div class="post-preview">
-                    <a asp-controller="Posts" asp-action="BlogPostIndex" asp-route-id="@blog.Id">
-                        <h2 class="post-title">@blog.Name</h2>
-                        <h3 class="post-subtitle">@blog.Description</h3>
-                    </a>
-                    <p class="post-meta">
-                        Author:
-                        <a href="#!">@blog.BlogUser.FullName</a>
-                        on @blog.Created.ToString("MMM dd, yyyy")
-                    </p>
-                </div>
-            }
+                                    @if (User.IsInRole(BlogRole.Administrator.ToString()))
+                                    {
+                                        <div class="col-3 text-center">
+                                            <a class="btn btn-primary btn-sm btn-block" asp-action="Index" asp-controller="Posts" asp-route-id="@blog.Id">Read Posts</a>
+                                        </div>
+                                        <div class="col-3 text-center">
+                                            <a class="btn btn-dark btn-sm btn-block" asp-action="Create" asp-controller="Posts" asp-route-id="@blog.Id">Create Post</a>
+                                        </div>
+                                        <div class="col-3 text-center">
+                                            <a class="btn btn-warning btn-sm btn-block" asp-action="Edit" asp-controller="Blogs" asp-route-id="@blog.Id">Edit Blog </a>
+                                        </div>
+                                        <div class="col-3 text-center">
+                                            <a class="btn btn-danger btn-sm btn-block" asp-action="Edit" asp-controller="Blogs" asp-route-id="@blog.Id">Delete Blog</a>
+                                        </div>
+                                    }
+
+                                    @if (!(User.IsInRole(BlogRole.Administrator.ToString())))
+                                    {
+                                        <div class="col-12 text-center">
+                                            <a class="btn btn-primary btn-block" asp-action="Index" asp-controller="Posts" asp-route-id="@blog.Id">Read Posts</a>
+                                        </div>
+                                    }
+
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
         </div>
     </div>
+</div> 
 
-    <div class="d-flex justify-content-center">
-        <div class="row">
-            @if (Model.PageCount > 1)
-            {
-                <div class="col-12 gx-3 h2">
-                    Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
-                </div>
-                <div class="col-4 gx-3">
-                    @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
-                        new PagedListRenderOptions
-                        {
-                            LiElementClasses = new string[] { "page-item" },
-                            PageClasses = new string[] { "page-link" }
-                        });
-                </div>
-            }
-        </div>
+
+<div class="d-flex justify-content-center">
+    <div class="row">
+        @if (Model.PageCount > 1)
+        {
+            <div class="col-12 gx-3 h2">
+                Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+            </div>
+            <div class="col-4 gx-3">
+                @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
+                    new PagedListRenderOptions
+                    {
+                        LiElementClasses = new string[] { "page-item" },
+                        PageClasses = new string[] { "page-link" }
+                    });
+            </div>
+        }
     </div>
 </div>
-
-@section Scripts {
-
-
-
-}
