--- a/Views/Posts/Index.cshtml
+++ b/Views/Posts/Index.cshtml
@@ -1,58 +1,81 @@
-﻿@using BlogProject.Services 
-@using BlogProject.Models 
-@inject IImageService imageService 
+﻿@using X.PagedList
+@using X.PagedList.Mvc.Core
+@using X.PagedList.Web.Common
+@using BlogProject.Models
+@using BlogProject.Services
+@using Microsoft.AspNetCore.Identity
+@using BlogProject.Enums
+@inject IImageService _imageService
 @model IEnumerable<Post>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Posts";
 }
 
 
-<div class="container px-4 px-lg-5">
+<div class="container-fluid">
     <div class="row gx-4 gx-lg-5 justify-content-center">
-        <div class="col-md-10 col-lg-8 col-xl-7">
+        <div class="col-md-12 col-lg-8 col-xl-7">
+            <div class="row">
+                @foreach (var post in Model)
+                {
+                    <div class="col-sm-2 col-lg-4 mt-3">
+                        <div class="card border-primary border-1 rounded" style="width: 22rem; height: 33rem;">
+                            <img class="card-img-top" height="185" width="200" src="@_imageService.DecodeImage(post.ImageData, post.ContentType)" />
+                            <div class="card-body text-center">
+                                <div>
+                                    <hr class="card-hr" />
+                                    <h5 class="card-title">@post.Title</h5>
+                                    <hr class="card-hr" />
+                                </div>
+                                <div>
+                                    <p class="card-text max-lines">@post.Abstract</p>
+                                </div>
+                                <br />
+                                <div class="row align-content-center ">
+                                    <div class="col-4 text-center">
+                                        <a class="btn btn-primary btn-block" asp-action="Index" asp-controller="Posts" asp-route-slug="@post.Slug">Read</a>
+                                    </div>
 
-            <h1>Index</h1>
+                                    @if (User.IsInRole(BlogRole.Administrator.ToString()))
+                                    {
+                                        <div class="col-4 text-center">
+                                            <a class="btn btn-warning btn-block" asp-action="Edit" asp-controller="Posts" asp-route-slug="@post.Slug">Edit</a>
+                                        </div>
+                                    }
 
-            <p>
-                <a asp-action="Create">Create New</a>
-            </p>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Image)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Title)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Abstract)
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td>
-                                <img class="img-fluid" width="200" src="@imageService.DecodeImage(item.ImageData, item.ContentType)" alt="Image" />
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Title)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Abstract)
-                            </td>
-                            <td>
-                                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                                <a asp-action="Details" asp-route-id="@item.Slug">Details</a> |
-                                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
+                                    @if (User.IsInRole(BlogRole.Administrator.ToString()))
+                                    {
+                                        <div class="col-4 text-center">
+                                            <a class="btn btn-danger btn-block" asp-action="Delete" asp-controller="Posts" asp-route-slug="@post.Slug">Delete</a>
+                                        </div>
+                                    }
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
         </div>
     </div>
-</div>
+</div> 
+
+
+@*<div class="d-flex justify-content-center">
+    <div class="row">
+        @if (Model.PageCount > 1)
+        {
+            <div class="col-12 gx-3 h2">
+                Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+            </div>
+            <div class="col-4 gx-3">
+                @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
+                    new PagedListRenderOptions
+                    {
+                        LiElementClasses = new string[] { "page-item" },
+                        PageClasses = new string[] { "page-link" }
+                    });
+            </div>
+        }
+    </div>
+</div>*@
