--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -49,7 +49,7 @@
                                             <a class="btn btn-warning btn-sm btn-block" asp-action="Edit" asp-controller="Blogs" asp-route-id="@blog.Id">Edit Blog </a>
                                         </div>
                                         <div class="col-3 text-center">
-                                            <a class="btn btn-danger btn-sm btn-block" asp-action="Edit" asp-controller="Blogs" asp-route-id="@blog.Id">Delete Blog</a>
+                                            <a class="btn btn-danger btn-sm btn-block" asp-action="Delete" asp-controller="Blogs" asp-route-id="@blog.Id">Delete Blog</a>
                                         </div>
                                     }
 
