--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,15 +16,15 @@
     ViewData["Subtitle"] = "Writing about .NET, C#, and other web development topics.";
 }
 
-<div class="container-fluid">
+<div class="container-fluid pt-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-12 col-lg-8 col-xl-7">
-            <div class="row">
+            <div class="row row-cols-1 row-cols-md-2 g-6">
                 @foreach (var blog in Model)
                 {
-                    <div class="col-sm-2 col-lg-4 mt-3">
-                        <div class="card border-primary border-1 rounded" style="width: 22rem; height: 33rem;">
-                            <img class="card-img-top" height="185" width="200" src="@_imageService.DecodeImage(blog.ImageData, blog.ContentType)" />
+                    <div class="col mb-4">
+                        <div class="card h-100 shadow rounded-3 mb-3">
+                            <img class="card-img-top" height="300" width="150" src="@_imageService.DecodeImage(blog.ImageData, blog.ContentType)" />
                             <div class="card-body text-center">
                                 <div>
                                     <hr class="card-hr" />
@@ -32,25 +32,25 @@
                                     <hr class="card-hr" />
                                 </div>
                                 <div>
-                                    <p class="card-text max-lines">@blog.Description</p>
+                                    <p class="card-text">@blog.Description</p>
                                 </div>
                                 <br />
-                                <div class="row align-content-center ">
+                                <div class="row row-cols-1 row-cols-md-4 d-flex ">
 
                                     @if (User.IsInRole(BlogRole.Administrator.ToString()))
                                     {
-                                        <div class="col-3 text-center">
-                                            <a class="btn btn-primary btn-sm btn-block" asp-action="Index" asp-controller="Posts" asp-route-id="@blog.Id">Read Posts</a>
-                                        </div>
-                                        <div class="col-3 text-center">
-                                            <a class="btn btn-dark btn-sm btn-block" asp-action="Create" asp-controller="Posts" asp-route-id="@blog.Id">Create Post</a>
-                                        </div>
-                                        <div class="col-3 text-center">
-                                            <a class="btn btn-warning btn-sm btn-block" asp-action="Edit" asp-controller="Blogs" asp-route-id="@blog.Id">Edit Blog </a>
-                                        </div>
-                                        <div class="col-3 text-center">
-                                            <a class="btn btn-danger btn-sm btn-block" asp-action="Delete" asp-controller="Blogs" asp-route-id="@blog.Id">Delete Blog</a>
-                                        </div>
+                                        
+                                        <a class="col g-1 btn btn-primary btn-block button-size" asp-action="Index" asp-controller="Posts" asp-route-id="@blog.Id">Read Posts</a>
+                                        
+                                        
+                                        <a class="col g-1 btn btn-dark btn-block button-size" asp-action="Create" asp-controller="Posts" asp-route-id="@blog.Id">Write Post</a>
+                                       
+                                        
+                                        <a class="col g-1 align-content-center btn btn-warning btn-block button-size" asp-action="Edit" asp-controller="Blogs" asp-route-id="@blog.Id">Edit</a>
+                                      
+                                        
+                                        <a class="col g-1 btn align-content-center btn-danger btn-block button-size" asp-action="Delete" asp-controller="Blogs" asp-route-id="@blog.Id">Delete</a>
+                                        
                                     }
 
                                     @if (!(User.IsInRole(BlogRole.Administrator.ToString())))
