--- a/Views/Posts/Details.cshtml
+++ b/Views/Posts/Details.cshtml
@@ -16,10 +16,14 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                <div class="row">
-                    <h2 class="mb-3">@ViewData["Title"]</h2>
-                    <span class="col-12"><strong>Written by: </strong>@ViewData["Author"]</span>
-                    <span class="mb-2">@ViewData["Created"]</span>
+                <div class="row d-flex">
+                    <div class="col-12">
+                        <h2 class="mb-3">@ViewData["Title"]</h2>
+                    </div>
+
+                     <span class="col-12"><strong>Written by: </strong>@ViewData["Author"]</span>
+                     <span class="col-12 mb-2">@ViewData["Created"]</span>
+                    
                 </div>
                 <ul class="list-inline text-start mt-3">
                     <li class="list-inline-item">
@@ -43,6 +47,14 @@
                             <span class="fa-stack fa-sm">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="" onclick="ShareAlert()">
+                            <span class="fa-stack fa-sm">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fas fa-share-square fa-stack-1x fa-inverse"></i>
                             </span>
                         </a>
                     </li>
@@ -237,14 +249,14 @@
 @section Scripts {
    
 <script src="~/js/Validation.js"></script>
-
+<script src="~/js/ShareAlert.js"></script>
 <!-- Bootstrap -->
 <script src="~/js/scripts.js"></script>
 
 <script>
 
     ValidateComment();
-
+    
 </script>
 
 }
