--- a/Views/Posts/SearchIndex.cshtml
+++ b/Views/Posts/SearchIndex.cshtml
@@ -14,7 +14,7 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-12 col-lg-8 col-xl-7">
             <div class="row">
-                @foreach (var post in Model)
+                @foreach (var post in Model.Reverse())
                 {
                     <div class="col-sm-2 col-lg-4 mt-3">
                         <div class="card border-primary border-1 rounded" style="width: 22rem; height: 33rem;">
